fix(JobCardDesktop): avoid resize brand and overflow data

--- a/src/components/UI/molecules/JobCardDesktop/JobCardDesktop.module.scss
+++ b/src/components/UI/molecules/JobCardDesktop/JobCardDesktop.module.scss
@@ -49,6 +49,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
   }
 
   &__button {
@@ -156,6 +157,7 @@
 
   &__brand {
     overflow: hidden;
+    min-width: fit-content;
     background-color: $color-grey-50;
     display: flex;
     align-items: center;
